[gd_scene load_steps=4 format=3 uid="uid://hskknygb7ucf"]

[ext_resource type="Script" path="res://assets/ui/death_menu/death_menu.gd" id="1_ktlqa"]
[ext_resource type="Texture2D" uid="uid://cdl2mva1ibxdu" path="res://textures/main-menu/logo.png" id="2_ndbjk"]
[ext_resource type="Theme" uid="uid://dygspx1ouf0ul" path="res://assets/ui/main_menu/main_menu.tres" id="3_1w0d4"]

[node name="death_menu" type="CanvasLayer"]
script = ExtResource("1_ktlqa")

[node name="MarginContainer" type="MarginContainer" parent="."]
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1080.0
offset_bottom = -1080.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 30

[node name="title" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer"]
texture_filter = 1
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_ndbjk")
expand_mode = 3
stretch_mode = 5

[node name="restart" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
focus_neighbor_top = NodePath("../exit")
focus_neighbor_bottom = NodePath("../main_menu")
theme = ExtResource("3_1w0d4")
text = "Restart"
icon_alignment = 1
expand_icon = true

[node name="main_menu" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../restart")
focus_neighbor_bottom = NodePath("../exit")
theme = ExtResource("3_1w0d4")
text = "main menu"
icon_alignment = 1
expand_icon = true

[node name="exit" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../main_menu")
focus_neighbor_bottom = NodePath("../restart")
theme = ExtResource("3_1w0d4")
text = "exit"
icon_alignment = 1
expand_icon = true

[node name="background" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.486275, 0, 0, 0)

[connection signal="pressed" from="MarginContainer/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
